k8/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: merge-sort-pod
  labels:
    app: web
spec:
  containers:
    - name: merge-sort-app
      image: elliotmtz12/merge-sort
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
  nodeSelector:
    env: prod
