k8/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: merge-sort-service
  namespace: default
spec:
  selector:
    app: web
  type: ClusterIP     
  ports:
    - protocol: TCP
      port: 8080      
      targetPort: 8080
