k8/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: merge-sort-service
  namespace: default
spec:
  selector:
    app: web
  type: NodePort    
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
