k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: merge-sort-ingress
  namespace: default  
spec:
  ingressClassName: nginx-default
  tls:
    - hosts:
        - demo.localdev.me  
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: merge-sort-service
            port:
              number: 8080
        path: /api
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
